[package]
name = "main"
version = "0.1.0"
edition = "2021"

 
[[bin]] 
name = "client"
path = "src/client.rs"

[[bin]] 
name = "server"
path = "src/server.rs"

[[bin]] 
name = "main"
path = "src/main.rs"



[dependencies]
zmq_Client = {path = "../zmq_Client"}
zmq_Server = {path = "../zmq_Server"}
zmq = "0.9"
time = "0.1.41"
serde_json = "1.0.79"
serde = "1.0.136"